<resources>
    <string name="app_name">CalendarApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_placeholder">PlaceholderActivity</string>
    <string name="please_register_your_information">Please Register Your Information</string>
    <string name="enter_username">Enter a Username</string>
    <string name="enter_a_password">Enter a Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="back_to_sign_in_text">Back to Sign In</string>
    <string name="register_text">Register</string>
    <string name="username">Username</string>
    <string name="please_sign_in">Please Sign In</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="view_calendar">View Calendar</string>
    <string name="create_new_event_text">Create new event</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="please_wait">Please Wait</string>
</resources>
