<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context="com.sye.kupps.calendarapp.login.RegisterFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:paddingTop="@dimen/padding_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_register_your_information" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        android:id="@+id/register_username_text_field"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/enter_a_password"
        android:id="@+id/register_password_text_field"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/repeat_password"
        android:id="@+id/register_repeat_password_text_field"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:id="@+id/register_button"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_sign_in_text"
        android:id="@+id/back_to_sign_in_button"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Temporary Bypass"
        android:id="@+id/bypass"
        />

</LinearLayout>
