<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sye.kupps.calendarapp.CreateEventFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/event_name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Event Title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose Date of Event:"
            android:textSize="@dimen/small_text_size"
            />

        <DatePicker
            android:id="@+id/new_event_date_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose Start Time:"
            android:textSize="@dimen/small_text_size"
            />

        <TimePicker
            android:id="@+id/event_start_time_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Choose End Time:"
            android:textSize="@dimen/small_text_size"
            />

        <TimePicker
            android:id="@+id/event_end_time_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        
        <EditText
            android:id="@+id/new_event_description_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:lines="8"
            android:maxLength="256"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/submit_new_event_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/submit"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"/>

            <Button
                android:id="@+id/cancel_new_event_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cancel"/>
        </LinearLayout>

    </LinearLayout>




</ScrollView>
